added unit tests and Pom dependency

--- a/kotlin-math-2/pom.xml
+++ b/kotlin-math-2/pom.xml
@@ -12,4 +12,12 @@
         <artifactId>kotlin-modules</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+    </dependencies>
 </project>
