--- a/pom.xml
+++ b/pom.xml
@@ -388,6 +388,7 @@
         <module>kotlin-libraries</module>
         <module>kotlin-libraries-2</module>
         <module>kotlin-libraries-http</module>
+        <module>kotlin-libraries-orm</module>
         <module>kotlin-patterns</module>
         <module>kotlin-quasar</module>
         <module>kotlin-reflection</module>
@@ -408,6 +409,7 @@
         <module>kotlin-math</module>
         <module>kotlin-math-2</module>
         <module>kotlin-spark</module>
+        <module>kotlin-prim</module>
     </modules>
 
     <profiles>
@@ -452,7 +454,7 @@
 
         <!-- logging -->
         <org.slf4j.version>1.7.30</org.slf4j.version>
-        <logback.version>1.2.3</logback.version>
+        <logback.version>1.2.13</logback.version>
         <log4j.version>1.2.17</log4j.version>
 
         <!-- utilities -->
